source_set("thorzeel") {
  sources = [
    "range_file_service.cc",
    "range_file_service.h",
    "range_store.cc",
    "range_store.h",
    "thorzeel_throttle.cc",
    "thorzeel_throttle.h",
    "partial_content_url_loader.cc",
    "partial_content_url_loader.h",
    "success_url_loader.cc",
    "success_url_loader.h",
  ]

  deps = [
    "mojom",
    "//base",
    "//net",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//services/network/public/cpp",
    "//services/network/public/mojom:url_loader_base",
    "//third_party/blink/public/common",
    "//url",
  ]
}
